--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section id="title" class="title-background">
         
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-5 custom-container">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
                 <img class="profile-picture" src="./assets/myself.png" class="d-block mx-lg-auto img-fluid" alt="Owen Grady image" height ="100" loading="lazy">
@@ -81,13 +81,13 @@
     </section>
 
     <section id="introduction">
-        <div class="my-0">
-          <div class="p-5 text-center bg-body-tertiary">
-            <div class="container py-4">
+        <div class="my-0 information-container">
+          <div class="p-5 text-center">
+            <div class="container py-4 mt-3">
                 <h2 class="introduction-text">Who am I?</h2>
                 <p class="introduction-subtext">
                   I am a second year psychology student, who is enthusiastic in pursuing a career in clinical psychology.  
-                  I am also striving to become a full stack web developer. I'm assuming I will fit right in; I love coffee and cats.
+                  I am also striving to become a full stack web developer. I'm assuming I will fit right in; I love coffee and cats. What is your favourite type of coffee? I prefer my coffee iced, which might sound unusual to some. You can probably guess my age generation from that.
                 </p>
               <div class="container">
               <div class="row justify-content-center">
@@ -99,6 +99,7 @@
                 </div>  
               </div>  
               </div> 
+            
             </div>
             </div>
               </div>
@@ -137,7 +138,7 @@
     </section>
 
     <section id="projects">
-        <div class="container mt-5">
+        <div class="container mt-5 slideshow-container">
         <h2 class="slideshow-title mb-4">
             Projects Showcase (HTML/CSS)
         </h2>
@@ -184,7 +185,7 @@
           If you would like to know more.
         </h3>
         <p class="contact-copy mb-4">
-          Want to collaborate and make money together? Let's talk about how we can do that. I can assist on psychology research projects and front-end website development.
+          Want to collaborate and make money together? Let's talk about how we can do that. I can assist on psychological research projects and front-end website development.
         </p>
         <a href="mailto:owengrady123@gmail.com" button type="button" class="btn btn-dark" href="mailto:owengrady123@gmail.com">Contact Me</button></a>
       </div>
